# AE

./: AE_ARCHITECTURE_WHITEPAPER.md  AE_FULL_WHITEPAPER.md  AE_Whitepaper.md  CODE_WIKI.md  README.md  __main__.py  about.html  act-1.html  act-2.html  act-3.html  ae-whitepaper-appendix.md  ae-whitepaper-ch7-9.md  ai-bot-content.md  ai-bot-projects.csv  ai-bot-projects.json  ai-bot-projects.md  ai-bot-projects.xlsx  ai-bot-raw.html  ai-decompose.js  analysis.html  app.js  app.py  arenabreakout_data.js  arknights_data.js  audimind.md  azurlane_data.js  ba_data.js  bl_data.js  build.py  build_arknights.py  build_ppt.py  cf_data.js  cfm_data.js  chapter-1.html  chapter-2.html  chapter-3.html  chapter-4.html  character-zhangji.html  character-zhangzhiyuan.html  characters-anim.js  (+204 more)
.cursor/: mcp.json
.uploads/: f351acd5-ceec-479f-bc7a-fc63b077ab6b_professional.docx
MyProject/: MyProject.uproject  ue5_remote.py
ai-card-game/: index.html  package-lock.json  package.json  tailwind.config.js
ai-creation-gallery/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
ai-script/: index.html  package-lock.json  package.json  tailwind.config.js
api/: app.ts  db.ts  linguaverse.db-shm  linguaverse.db-wal  server.ts  types.ts
rust-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
rust-desktop-app/src-tauri/src/: main.rs
rust-desktop-app/src-tauri/src/commands/: mod.rs  sandbox_cmd.rs  system_cmd.rs
rust-desktop-app/src-tauri/src/modules/: mod.rs  plugin.rs  registry.rs
rust-desktop-app/src-tauri/src/sandbox/: isolation.rs  mod.rs  resource.rs  vm.rs
(+2199 files in other folders)
